--- a/client/src/theme/utils/scrollbars.less
+++ b/client/src/theme/utils/scrollbars.less
@@ -1,21 +1,1 @@
-@import '../palette.less';
-
-
-.slim-scrollbar(@size: .875rem, @color: fade(@text-color, 30%)) {
-    &::-webkit-scrollbar {
-        width: @size;
-        height: @size;
-        background: transparent;
-
-        &-thumb {
-            border: @size / 3 solid transparent;
-            background: @color;
-            background-clip: content-box;
-            border-radius: @size;
-        }
-
-        &-corner {
-            background: transparent;
-        }
-    }
-}
+*
