--- a/client/src/theme/themes/guard-light.less
+++ b/client/src/theme/themes/guard-light.less
@@ -1,9 +1,1 @@
-@primary: #9f3096;
-
-@body-background-color: #fff;
-@text-color: #202124;
-@text-color-on-primary: #fff;
-
-@error: #f44336;
-@success: #4caf50;
-@warning: #ff9800;
+*
