--- a/client/src/index.less
+++ b/client/src/index.less
@@ -1,43 +1,1 @@
-@import './theme/palette.less';
-@import './theme/utils/scrollbars.less';
-@import './assets/fonts/Lato/Lato.css';
-
-html {
-    height: 100%;
-}
-
-*, *:before, *:after {
--webkit-box-sizing: border-box;
--moz-box-sizing: border-box;
--ms-box-sizing: border-box;
-box-sizing: border-box
-}
-
-body {
-    font-family: @font-family;
-    margin: 0;
-    background-color: @body-background-color;
-    background-attachment: fixed;
-    color: @text-color;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    overflow: auto;
-    .slim-scrollbar();
-}
-
-button, input, textarea {
-    font: inherit;
-    color: inherit;
-}
-
-button:not([disabled]) {
-    cursor: pointer;
-}
-
-#app {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
+*
